# fakku-downloader

./: CMakeLists.txt
src/: CMakeLists.txt  downloader.cpp  downloader.h  main.cpp
